231108  🧑‍🏭 feat & test: remove data 로직 구현, 테스트 및 버그 수정

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -55,6 +55,7 @@ services:
       - ./dags:/opt/airflow/dags
       - ./lib:/opt/airflow/lib
       - ./src:/opt/airflow/src
+      - logs:/opt/airflow/logs
     environment: *airflow_environment
     command: scheduler
 
